tests/type/bad/function_arity.hel
foreign io_unit: IO<()>;

f = (a: i32, b: i32): i32 { a + b };
x = f(1);

main = io_unit;
